--- a/src/components/sidebar/splitLinkView/splitLinkView.scss
+++ b/src/components/sidebar/splitLinkView/splitLinkView.scss
@@ -20,8 +20,10 @@
 
         .expanded {
             flex-grow: 1;
+            flex-shrink: 1;
             display: flex;
             flex-direction: column;
+            overflow-y: auto;
         }
     }
 
